# cadastro_eventos

./: criar_tabela.sql  pyproject.toml
src/: main.py
src/clients/: salvar_formulario.py
src/core/: database.py  exception_handlers.py
src/routes/: formulario.py
src/schemas/: formulario_schema.py
