[tool.poetry]
name = "cadastro-eventos"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasimbroisi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = {extras = ["standard"], version = "^0.135.1"}
loguru = "^0.7.3"
uvicorn = "^0.41.0"
sqlalchemy = "^2.0.48"
psycopg2 = "^2.9.11"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
